Cleaning the cde for import/export